# TechUni

Agent-Based Technologies/restaurant/: AgentStart.java  BabyAgent.java  OrangeAgent.java
Cifrova Shemotehnika/: CSh_T_primeren_bileti_3_Mollov.vhd  CSh_T_redoven_2017_A1_VHDL.vhd  CSh_T_redoven_2017_B2_VHDL.vhd  CSh_T_redoven_2017_C3_VHDL.vhd  CSh_T_zimen_2016_B2_VHDL.vhd
Cryptography/src/: Main.java
Data Base/: finalExercise.sql  kursovaZadacha.sql  myTrainingTask.sql  schoolSportsClubs.sql
Operating Systems/: Mutex.cpp  zadachaBankeri.cpp  zadachaBaseini.cpp
Operating Systems/ThreadsIn_C_CPP_CS_Java/: PoolThread.java  ThreadsExample.java  threads.c  threads.cs
PIK 3/CarSystem/: Car.java  ReservingThread.java  ReturningThread.java  SearchingThread.java  Server.java  ServerThread.java
PIK 3/EventServerSystem/: Event.java  EventStorage.java  Message.java  Server.java  ServerRunnable.java
PMU/PMU-upr4/: App2.sln
PMU/exercise 5/: lab5_PMU.sln
Programni Ezici/: CMakeLists.txt  exerciseTask1.cpp  exerciseTask10.cpp  exerciseTask2.cpp  exerciseTask3.cpp  finalExercise1.cpp  finalExercise2.cpp  lab3_PredefiniraniFunkcii.cpp  lab3_PriqtelskaFunkciq.cpp  lab4_Nasledqvane.cpp  lab6_VirtualnaFunkciq.cpp  lab7_Predefinirane.cpp  lab9_Konstruktori.cpp  oblak1Avtomobili.cpp  oblak2Kalendar.cpp  purvoKontrolno1.cpp  somethingRandom.cpp  test.cpp  test2.cpp
Programni Sredi/: PS_38_Martin.sln
Programni Sredi/EasyMVVM/: EasyMVVM.csproj  MainWindow.xaml  MainWindowVM.cs  Model.cs
Programni Sredi/ExpenseIt/: ExpenseIt.csproj  ExpenseItHome.xaml  ExpenseItHome.xaml.cs  (+3 more)
(+107 files in other folders)
