cmake_minimum_required(VERSION 3.15)
project(Control)

set(CMAKE_CXX_STANDARD 14)

add_executable(test test.cpp)
add_executable(test2 test2.cpp)

add_executable(lab31 lab3_PredefiniraniFunkcii.cpp)
add_executable(lab32 lab3_PriqtelskaFunkciq.cpp)
add_executable(lab41 lab4_Nasledqvane.cpp)
add_executable(lab62 lab6_VirtualnaFunkciq.cpp)
add_executable(lab71 lab7_Predefinirane.cpp)
add_executable(lab91 lab9_Konstruktori.cpp)

add_executable(problem1 exerciseTask1.cpp)
add_executable(problem2 exerciseTask2.cpp)
add_executable(problem3 exerciseTask3.cpp)
add_executable(problem10 exerciseTask10.cpp)

add_executable(cherry finalExercise1.cpp)
add_executable(house finalExercise2.cpp)
add_executable(asd somethingRandom.cpp)

add_executable(o1 oblak1Avtomobili.cpp)
add_executable(o2 oblak2Kalendar.cpp)

add_executable(k1 purvoKontrolno1.cpp)

